--- a/src/app/admin/add-edit-employee/add-edit-employee.component.html
+++ b/src/app/admin/add-edit-employee/add-edit-employee.component.html
@@ -62,7 +62,7 @@
         </mat-form-field><br>
         <input type="number" readonly [ngModel]="admin_id" formControlName="admin_id_fk" hidden>
 
-        <div mat-dialog-action [align]="'end'">
+        <div mat-dialog-action [align]="'end'" id="main_button">
             <button mat-raised-button color="warn" (click)="resetEmp()" class="reset_btn">Reset</button>
             <button mat-raised-button (click)="onSubmit()" class="add_btn" type="submit"
                 [disabled]="!empForm.valid">{{actionBtn}}</button>
