--- a/src/app/admin/add-edit-item/add-edit-item.component.html
+++ b/src/app/admin/add-edit-item/add-edit-item.component.html
@@ -54,7 +54,7 @@
         </div>       
     </form>
     
-    <div mat-dialog-action [align]="'end'">
+    <div mat-dialog-action [align]="'end'"  id="main_button">
         <button mat-raised-button color="warn" (click)="resetItem()" class="reset_btn">Reset</button>
         <button mat-raised-button (click)="onSubmit()" class="add_btn" type="submit"
             [disabled]="!itemForm.valid">{{actionBtn}}</button>
