--- a/src/app/admin/employee/employee.component.html
+++ b/src/app/admin/employee/employee.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
   <div class="view_notice">
-    <span class="notice_text">Manage Employee</span>
+    <span class="notice_text">Employee Details</span>
     <mat-icon id="add_item" (click)="add_Employee()">add_circle</mat-icon>
   </div>
   <div class="count_search">
