--- a/src/app/admin/party/party.component.html
+++ b/src/app/admin/party/party.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
 <div class="view_notice">
-  <span class="notice_text">Manage Party</span>
+  <span class="notice_text">Party Details</span>
   <mat-icon id="add_party" (click)="add_party()">add_circle</mat-icon>
 </div>
   <div class="count_search">
