--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
     <div class="view_notice">
-      <span class="notice_text">Product</span>
+      <span class="notice_text">Product Details</span>
       <mat-icon id="add_product" (click)="add_product()">add_circle</mat-icon>
     </div>
     <div class="count_search">
@@ -14,10 +14,16 @@
         <div class="mat-elevation-z8">
           <table mat-table [dataSource]="dataSource" matSort id="table">
             <ng-container matColumnDef="slno">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
               <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
                 paginatorRef.pageSize)+(i+1)}}</td>
             </ng-container>
+
+            <ng-container matColumnDef="product_cat_id_fk">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
+              <td class="data" mat-cell *matCellDef="let row">{{row.product_cat_id_fk}}</td>
+            </ng-container>
+
             <ng-container matColumnDef="product_name">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.product_name}}</td>
@@ -31,11 +37,11 @@
               <td class="data" mat-cell *matCellDef="let row">{{row.product_weight_id_fk}}</td>
             </ng-container>
             <ng-container matColumnDef="product_page">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>product page</th>
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product page</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.product_page}}</td>
             </ng-container>
             <ng-container matColumnDef="product_produ_cost">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>production Cost</th>
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Production Cost</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.product_produ_cost}}</td>
             </ng-container>
             <ng-container matColumnDef="product_cost_price">
@@ -52,10 +58,7 @@
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Unit</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.product_unit_id_fk}}</td>
             </ng-container>
-            <ng-container matColumnDef="product_cat_id_fk">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-              <td class="data" mat-cell *matCellDef="let row">{{row.product_cat_id_fk}}</td>
-            </ng-container>
+            
             <ng-container matColumnDef="Action">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
               <td class="data" mat-cell *matCellDef="let row"> <mat-icon (click)="editProduct(row)">edit</mat-icon></td>
