--- a/src/app/admin/unit/unit.component.html
+++ b/src/app/admin/unit/unit.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
   <div class="view_notice">
-    <span class="notice_text">Manage Unit</span>
+    <span class="notice_text">Unit Details</span>
     <mat-icon id="add_unit" (click)="add_unit()">add_circle</mat-icon>
   </div>
   <div class="count_search">
