--- a/src/app/admin/add-edit-area-allocate/add-edit-area-allocate.component.css
+++ b/src/app/admin/add-edit-area-allocate/add-edit-area-allocate.component.css
@@ -8,9 +8,15 @@
 }
 .example-spacer {
     flex: 1 5 auto;
+    margin-bottom: 20px;
+    color: rgb(20, 89, 92);
+    font-size: 18px;
     
 }
-
+.material-icons {
+    color: rgb(20, 89, 92);
+    margin-bottom: 20px;
+}
 
 textarea{
     height: 18px;
@@ -22,13 +28,13 @@ textarea{
 
 mat-toolbar{
     height:40px;
-    margin-bottom:-20px;
+    /* margin-bottom:-20px; */
     padding: 0px;
     background: none;
     position: relative;
-    top:-25px;
+    /* top:-25px; */
     color:whitesmoke;
-    background-color:#14595c; ;
+    /* background-color:#14595c; ; */
 }
 
 
