--- a/src/app/admin/add-edit-item/add-edit-item.component.css
+++ b/src/app/admin/add-edit-item/add-edit-item.component.css
@@ -16,76 +16,43 @@
   color: rgb(20, 89, 92);
   margin-bottom: 20px;
 }
-
+#main_button{
+  width: 190px;
+  margin: auto;
+}
 .reset_btn {
+  float: left;
   width: 80px;
   height: 40px;
-  margin-right: 60px;
 
 }
 
 .add_btn {
   width: 80px;
   height: 40px;
-  margin-right: 100px;
+  float: right;
   background-color: green;
   color: white;
 }
 
 mat-toolbar {
   height: 40px;
-  /* margin-bottom: 20px; */
   background: none;
   color: whitesmoke;
   padding: 0px;
   position: relative;
-  /* background-color:#14595c;  */
 }
 
-@media (min-width:1200px) and (max-width:2000px) {
-  #weight {
-    width: 410px;
-  }
-}
 
-@media (min-width:768px) and (max-width:1200px) {
+
+@media (min-width:768px) and (max-width:2000px) {
   #weight {
     width: 410px;
   }
 
-  /* .column{
-   width: 100%;
-   height: auto;
-  }
-  .column mat-form-field{
-   width: 31%;
-   margin-left: 2%;
-  }
-  #column_1 mat-form-field{
-    position: relative;
-    bottom: 67px;
-  }
-  #weight{
-    position: relative;
-    top: 80px;
-
-  }
-  .reset_btn{
-    float: left;
-    margin: 0px;
-    margin-top: -47px;
-    margin-left: 52%;
-  } 
-   .add_btn{
-    float: right;
-    margin: 0px;
-    margin-top: -47px;
-    margin-right: 18%;
-
-  } */
 }
 
-@media (min-width:521px) and (max-width:767px) {
+@media (max-width:768px) {
   .column {
     width: 100%;
     height: auto;
@@ -93,42 +60,5 @@ mat-toolbar {
 
   .column mat-form-field {
     width: 100%;
-  }
-
-  .reset_btn {
-    float: left;
-    margin: 0px;
-    margin-left: 13%;
-  }
-
-  .add_btn {
-    float: right;
-    margin: 0px;
-    margin-right: 13%;
-
-  }
-}
-
-@media (max-width:521px) {
-  .column {
-    width: 100%;
-    height: auto;
-  }
-
-  .column mat-form-field {
-    width: 100%;
-  }
-
-  .reset_btn {
-    float: left;
-    margin: 0px;
-    margin-left: 13%;
-  }
-
-  .add_btn {
-    float: right;
-    margin: 0px;
-    margin-right: 13%;
-
   }
 }
