--- a/src/app/admin/category/category.component.css
+++ b/src/app/admin/category/category.component.css
@@ -22,14 +22,15 @@
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
-    font-size: 16px;}
+    font-size: 16px;
+}
 
 .count_search {
     height: 40px;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
     box-sizing: border-box;
     color: #0d5e58;
 }
@@ -40,7 +41,7 @@
 .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
-    padding: 5px;
+    padding: 7px 2px 6px 7px;
     background-color: whitesmoke;
     position: relative;
     top: -5px;
