--- a/src/app/admin/production/production.component.css
+++ b/src/app/admin/production/production.component.css
@@ -21,6 +21,8 @@
 
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+    font-size: 16px;
 }
 
 .count_search {
@@ -28,19 +30,28 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
     box-sizing: border-box;
     color: #0d5e58;
 }
-
+.count_search .notice_text{
+    font-size: 16px;
+}
 .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
-    padding: 5px;
+    padding: 7px 2px 6px 7px;
     background-color: whitesmoke;
     position: relative;
     top: -5px;
     left: 0px;
+}
+
+#add_dues{
+    position: relative;
+    top: -5px;
+    left: 2px;
+    cursor: pointer;
 }
 
 mat-icon {
@@ -51,7 +62,7 @@ mat-icon {
 }
 
 #table {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -60,7 +71,8 @@ mat-icon {
     color: white;
     background-color: #0f575a;
     height: 40px;
-    font-weight: bold;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
 }
 
 tr:nth-child(even) {
@@ -77,13 +89,11 @@ tr:hover {
     color: aliceblue;
     cursor: pointer;
 }
-
+.mat-row:hover > .mat-cell {
+    color:  white
+  }
 ng-container {
     text-align: center;
-}
-
-.cotainer {
-    margin-top: 5px;
 }
 
 .mat-form-field {
@@ -91,6 +101,3 @@ ng-container {
     width: 100%;
 }
 
-.data:hover {
-    color: white;
-}
