--- a/src/app/admin/production/production.component.html
+++ b/src/app/admin/production/production.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
     <div class="view_notice">
-      <span class="notice_text">Production</span>
+      <span class="notice_text">Production Details</span>
       <mat-icon id="add_dues" (click)="add_production()">add_circle</mat-icon>
     </div>
     <div class="count_search">
@@ -14,7 +14,7 @@
         <div class="mat-elevation-z8">
           <table mat-table [dataSource]="dataSource" matSort id="table">
             <ng-container matColumnDef="slno">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
               <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
                 paginatorRef.pageSize)+(i+1)}}</td>
             </ng-container>
