--- a/src/app/admin/unit/unit.component.css
+++ b/src/app/admin/unit/unit.component.css
@@ -30,7 +30,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
     box-sizing: border-box;
     color: #0d5e58;
     /* position: fixed;
@@ -44,7 +44,7 @@
 .search input{   
     border-bottom: 1px solid #0a4547;
     outline: none;
-    padding: 5px;
+    padding: 7px 2px 6px 7px;
     background-color: whitesmoke;
     position: relative;
     top: -5px;
