--- a/src/app/admin/add-edit-sale/add-edit-sale.component.html
+++ b/src/app/admin/add-edit-sale/add-edit-sale.component.html
@@ -1,17 +1,19 @@
-<div id="wrapper">
+<div class="salediv">
 	<div class="view_notice">
 		<span class="notice_text">{{action_text}}</span>
 	</div>
 
 	<nav ngbNav #nav="ngbNav" class="nav-tabs" style="height: 46px;">
+		<!-- //////////////////////// for customer table data start ///////////////// -->
 		<ng-container ngbNavItem>
-			<a ngbNavLink style="background-color:#05363c; border-radius: 5px; height:37px;color: whitesmoke; "
+			<a ngbNavLink
+				style="background-color:#05363c; border-radius: 5px; height:37px;color: whitesmoke;margin-left: 5px; margin-right: 5px;font-size: 14px;"
 				(click)="cus()">Customer</a>
 			<ng-template ngbNavContent>
 				<div class="content_area">
-					<form [formGroup]="saleform">
+					<form [formGroup]="saleformcust">
 						<div class="column">
-							<input type="number" formControlName="cust_id" readonly hidden>
+
 							<mat-form-field appearance="fill">
 								<mat-label>Customer Id</mat-label>
 								<input formControlName="cust_id" matInput placeholder="Customer Id">
@@ -19,12 +21,15 @@
 
 							<mat-form-field appearance="fill">
 								<mat-label>Customer</mat-label>
-								<input formControlName="cust_name" matInput placeholder="Name">
+								<mat-select formControlName="cust_id" (valueChange)="getCust($event)">
+									<mat-option *ngFor="let cust of cust_data"
+										[value]="cust.cust_id">{{cust.cust_name}}</mat-option>
+								</mat-select>
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
 								<mat-label>Mobile</mat-label>
-								<input type="number" formControlName="cust_mobile" matInput placeholder="Mobile">
+								<input type="number" formControlName="cust_contact_no" matInput placeholder="Mobile">
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
@@ -34,7 +39,7 @@
 							<br>
 							<mat-form-field appearance="fill" class="textarea_box">
 								<mat-label>Address</mat-label>
-								<textarea type="text" formControlName="cust_address" matInput
+								<textarea type="text" formControlName="cust_shop_address" matInput
 									placeholder="Address"></textarea>
 							</mat-form-field>
 						</div>
@@ -42,97 +47,185 @@
 					<div mat-dialog-action [align]="'end'">
 						<button mat-raised-button (click)="onSubmit()" class="add_btn" type="submit"
 							style="background-color: #0d5e58; color: white;"
-							[disabled]="!saleform.valid">{{actionBtn}}</button>
+							[disabled]="!saleformcust.valid">{{actionBtn}}</button>
 					</div>
 				</div>
 			</ng-template>
 		</ng-container>
+		<!-- //////////////////////// for customer table data end ///////////////// -->
+		<!-- //////////////////////// for item table data start ///////////////// -->
 		<ng-container ngbNavItem>
-			<a ngbNavLink style="background-color:#05363c; border-radius: 5px; color: whitesmoke; height:37px;"
-				(click)="items()">Item</a>
+			<a ngbNavLink
+				style="background-color:#05363c; border-radius: 5px; color: whitesmoke; height:37px;margin-right: 5px; font-size: 14px;"
+				(click)="prod()">Product</a>
 			<ng-template ngbNavContent>
 				<div class="content_area">
-					<form [formGroup]="saleform">
+					<form [formGroup]="saleformprod">
 						<div class="column">
-							<!-- <input type="number" formControlName="cust_id" readonly> -->
+							<input formControlName="admin_id_fk" matInput placeholder="Name" readonly
+								[ngModel]="admin_id" hidden>
+
 							<mat-form-field appearance="fill">
 								<mat-label>Customer</mat-label>
-								<input formControlName="cust_name" matInput placeholder="Name">
+								<input formControlName="cust_id_fk" matInput placeholder="Name">
 							</mat-form-field>
 
-							<mat-form-field appearance="fill" class="select">
+							<mat-form-field appearance="fill">
 								<mat-label>Category</mat-label>
-								<mat-select formControlName="item_cat_id_fk">
-									<!-- <mat-option *ngFor="let cat of cat_data" [value]="cat.cat_id">{{cat.cat_name}}</mat-option> -->
+								<mat-select formControlName="cat_id" (valueChange)="getCat($event)">
+									<mat-option *ngFor="let cat of cat_data"
+										[value]="cat.cat_id">{{cat.cat_name}}</mat-option>
 								</mat-select>
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
-								<mat-label>Item</mat-label>
-								<input formControlName="Item_name" matInput placeholder="Item Name">
+								<mat-label>Product</mat-label>
+								<mat-select formControlName="product_id" (valueChange)="getProd($event)">
+									<mat-option *ngFor="let prod of prod_data"
+										[value]="prod.product_id">{{prod.product_name}}</mat-option>
+								</mat-select>
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
 								<mat-label>Unit</mat-label>
-								<input formControlName="item_unit" matInput placeholder="Unit">
+								<input formControlName="product_unit_id_fk" matInput placeholder="unit">
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
-								<mat-label>Rate</mat-label>
-								<input formControlName="item_rate" matInput placeholder="Rate">
+								<mat-label>Size</mat-label>
+								<input formControlName="product_size_id_fk" matInput placeholder="Size">
 							</mat-form-field><br>
 
 							<mat-form-field appearance="fill">
-								<mat-label>Quantity</mat-label>
-								<input formControlName="item_quantity" matInput placeholder="Quantity">
+								<mat-label>Weight</mat-label>
+								<input formControlName="product_weight_id_fk" matInput placeholder="Weight">
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
-								<mat-label>Free</mat-label>
-								<input formControlName="Free" matInput placeholder="Free">
+								<mat-label>Page</mat-label>
+								<input formControlName="product_page" matInput placeholder="Page">
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
-								<mat-label>Discount</mat-label>
-								<input formControlName="discount" matInput placeholder="Discount">
+								<mat-label>Production Cost</mat-label>
+								<input formControlName="product_produ_cost" matInput placeholder="Production Cost">
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
-								<mat-label>GST</mat-label>
-								<input formControlName="gst" matInput placeholder="GST">
+								<mat-label>Cost</mat-label>
+								<input formControlName="product_cost_price" matInput placeholder="Cost">
 							</mat-form-field>
-
-							<mat-form-field appearance="fill">
-								<mat-label>Net Rate</mat-label>
-								<input formControlName="net_rate" matInput placeholder="Net Rate">
-							</mat-form-field><br>
 
 							<mat-form-field appearance="fill" class="text_amount">
-								<mat-label>Amount</mat-label>
-								<input formControlName="amount" matInput placeholder="Amount">
+								<mat-label>Retail</mat-label>
+								<input formControlName="product_retail_price" matInput placeholder="Retail">
 							</mat-form-field><br>
+							<mat-icon class="addButton" (click)="onAdd()">add</mat-icon>
 						</div>
 					</form>
-					<div mat-dialog-action [align]="'end'">
-						<button mat-raised-button (click)="onSubmit()" class="item_add_btn"
-							style="background-color: #05363c; color: white;" type="submit"
-							[disabled]="!saleform.valid">{{action_Btn}}</button>
+
+					<!-- /////////////// for sale description /////////////////// -->
+					<div class="cotainer">
+						<form>
+							<div class="mat-elevation-z8">
+								<table mat-table [dataSource]="dataSource" matSort id="table">
+									<ng-container matColumnDef="slno">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
+										<td class="data" mat-cell *matCellDef="let row; let i = index;">
+											{{(paginatorRef.pageIndex * paginatorRef.pageSize)+(i+1)}}</td>
+									</ng-container>
+
+									<ng-container matColumnDef="cust_name">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
+										<td class="data" mat-cell *matCellDef="let row">{{row.cust_id_fk}}</td>
+									</ng-container>
+
+									<ng-container matColumnDef="product_id">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product Name
+										</th>
+										<td class="data" mat-cell *matCellDef="let row">{{row.product_id_fk}}</td>
+									</ng-container>
+
+									<ng-container matColumnDef="product_unit_id_fk">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Unit
+										</th>
+										<td class="data" mat-cell *matCellDef="let row">{{row.product_unit_id_fk}}</td>
+									</ng-container>
+
+									<ng-container matColumnDef="product_size_id_fk">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Size
+										</th>
+										<td class="data" mat-cell *matCellDef="let row">{{row.product_size_id_fk}}</td>
+									</ng-container>
+
+									<ng-container matColumnDef="product_weight_id_fk">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Weight</th>
+										<td class="data" mat-cell *matCellDef="let row">{{row.product_weight_id_fk}}
+										</td>
+									</ng-container>
+
+									<ng-container matColumnDef="product_page">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Page</th>
+										<td class="data" mat-cell *matCellDef="let row">{{row.product_page}}</td>
+									</ng-container>
+
+									<ng-container matColumnDef="product_produ_cost">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Production
+											Cost</th>
+										<td class="data" mat-cell *matCellDef="let row">{{row.product_produ_cost}}</td>
+									</ng-container>
+									<ng-container matColumnDef="product_cost_price">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Cost
+										</th>
+										<td class="data" mat-cell *matCellDef="let row">{{row.product_cost_price}}</td>
+									</ng-container>
+
+									<ng-container matColumnDef="product_retail_price">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Retail
+										</th>
+										<td class="data" mat-cell *matCellDef="let row">{{row.product_retail_price}}
+										</td>
+									</ng-container>
+
+									<ng-container matColumnDef="Action">
+										<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+										<td class="data" mat-cell *matCellDef="let row"> <mat-icon>delete</mat-icon>
+										</td>
+									</ng-container>
+
+									<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+									<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+									<tr class="mat-row" *matNoDataRow>
+										<td class="mat-cell" colspan="4">No data show</td>
+									</tr>
+								</table>
+								<mat-paginator #paginatorRef [pageSizeOptions]="[5]"
+									aria-label="Select page of users"></mat-paginator>
+							</div>
+						</form>
 					</div>
 				</div>
 
 			</ng-template>
 		</ng-container>
+		<!-- //////////////////////// for item table data end ///////////////// -->
+		<!-- //////////////////////// for final bill  table data start ///////////////// -->
+
 		<ng-container ngbNavItem><br>
 			<a ngbNavLink (click)="final_bill()"
-				style="background-color:#05363c; border-radius: 5px;color: whitesmoke; height:37px">Final bill</a>
-			<button id="billnobtn">Bill Ref.No:VE/0/22-23</button>
+				style="background-color:#05363c; border-radius: 5px;color: whitesmoke; height:37px; font-size:14px"
+				(click)="getfinal()">Final bill</a>
+			<button id="billnobtn">Bill Ref.No:{{sale_bill_no}}</button>
 			<ng-template ngbNavContent>
 				<div class="content_area">
 					<form [formGroup]="saleform">
+						<input formControlName="admin_id_fk" matInput placeholder="Name" readonly [ngModel]="admin_id"
+							hidden>
 						<div class="column">
+
 							<mat-form-field appearance="fill">
 								<mat-label>Sale by:</mat-label>
-								<input formControlName="item_sale_by" matInput placeholder="Sale by">
+								<input formControlName="cust_id" matInput placeholder="Sale by">
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
@@ -144,42 +237,37 @@
 								<mat-label>GST</mat-label>
 								<input formControlName="item_gst" matInput placeholder="GST">
 							</mat-form-field>
-
+							
 							<mat-form-field appearance="fill">
 								<mat-label>SGST</mat-label>
 								<input formControlName="item_sgst" matInput placeholder="SGST">
-							</mat-form-field><br>
-
+							</mat-form-field>
+							<br>
 							<mat-form-field appearance="fill">
 								<mat-label>CGST</mat-label>
 								<input formControlName="item_cgst" matInput placeholder="CGST">
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
-								<mat-label>Discount</mat-label>
-								<input formControlName="item_discount" matInput placeholder="item_discount">
-							</mat-form-field>
-
-							<mat-form-field appearance="fill">
 								<mat-label>Amount</mat-label>
 								<input formControlName="item_amount" matInput placeholder="Amount">
 							</mat-form-field>
-
+							
 							<mat-form-field appearance="fill">
 								<mat-label>Backdues</mat-label>
 								<input formControlName="item_backdues" matInput placeholder="Backdues">
-							</mat-form-field><br>
+							</mat-form-field>
 
 							<mat-form-field appearance="fill">
 								<mat-label>R/O</mat-label>
 								<input formControlName="item_ro" matInput placeholder="RO">
 							</mat-form-field>
-
+							<br>
 							<mat-form-field appearance="fill">
 								<mat-label>Total Amount</mat-label>
 								<input formControlName="item_total_amount" matInput placeholder="Net amount">
 							</mat-form-field>
-
+						
 							<mat-form-field appearance="fill">
 								<mat-label>Paid</mat-label>
 								<input formControlName="item_paid_amount" matInput placeholder="Paid">
@@ -189,13 +277,14 @@
 								<mat-label>Dues</mat-label>
 								<input formControlName="item_dues" matInput placeholder="Dues">
 							</mat-form-field>
-							<br>
+
 							<mat-form-field appearance="fill" class="date_box">
 								<mat-label>Date</mat-label>
 								<input formControlName="final_bill_date" matInput [matDatepicker]="picker">
 								<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
 								<mat-datepicker #picker></mat-datepicker>
 							</mat-form-field>
+							
 						</div>
 						<!-- ---------------------------------------------Change--------------------------------------- -->
 						<div mat-dialog-action [align]="'end'">
@@ -206,6 +295,8 @@
 				</div>
 			</ng-template>
 		</ng-container>
+		<!-- //////////////////////// for final bill  table data end ///////////////// -->
+
 	</nav>
 	<div [ngbNavOutlet]="nav" class="mt-2"></div>
 	<!-- <div class="footer">Powered by :Greensoft</div> -->
