--- a/src/app/admin/sale/sale.component.html
+++ b/src/app/admin/sale/sale.component.html
@@ -54,6 +54,11 @@
             <td class="data" mat-cell *matCellDef="let row">{{row.sale_discount}}</td>
           </ng-container>
 
+          <ng-container matColumnDef="sale_bill_no">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Discount</th>
+            <td class="data" mat-cell *matCellDef="let row">{{row.sale_bill_no}}</td>
+          </ng-container>
+
           <ng-container matColumnDef="sale_date">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.sale_date}}</td>
